--- a/web-app-performance/web-app-performance.csproj
+++ b/web-app-performance/web-app-performance.csproj
@@ -7,12 +7,17 @@
     <RootNamespace>web_app_performance</RootNamespace>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Dapper" Version="2.1.35" />
+  <ItemGroup>    <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="MySqlConnector" Version="2.3.7" />    <PackageReference Include="Dapper" Version="2.1.35" />
     <PackageReference Include="MySqlConnector" Version="2.3.7" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="StackExchange.Redis" Version="2.8.16" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\web-app-domain\web-app-domain.csproj" />
+    <ProjectReference Include="..\web-app-repository\web-app-repository.csproj" />
   </ItemGroup>
 
 </Project>
