--- a/web-app-performance/web-app-performance.csproj
+++ b/web-app-performance/web-app-performance.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,8 +7,8 @@
     <RootNamespace>web_app_performance</RootNamespace>
   </PropertyGroup>
 
-  <ItemGroup>    <PackageReference Include="Dapper" Version="2.1.35" />
-    <PackageReference Include="MySqlConnector" Version="2.3.7" />    <PackageReference Include="Dapper" Version="2.1.35" />
+  <ItemGroup> 
+	<PackageReference Include="Dapper" Version="2.1.35" />
     <PackageReference Include="MySqlConnector" Version="2.3.7" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="StackExchange.Redis" Version="2.8.16" />
